# django-authentication

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
project/: settings.py
